[gd_scene load_steps=6 format=3 uid="uid://dwhwgx2j0e5yy"]

[ext_resource type="Script" path="res://PointArea.gd" id="1_aea1y"]
[ext_resource type="Texture2D" uid="uid://yd04gdwws8kl" path="res://assets/particle.png" id="2_vjpm0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_srikq"]
radius = 5.0

[sub_resource type="Gradient" id="Gradient_xidv6"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_6prn3"]
colors = PackedColorArray(1, 1, 0, 1, 1, 0, 1, 1)

[node name="PointArea" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_aea1y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_srikq")
debug_color = Color(0.847862, 0.0009424, 0.905042, 0.42)

[node name="Label" type="Label" parent="."]
visible = false
z_index = 100
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 10.0
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 15
lifetime = 0.5
one_shot = true
explosiveness = 0.8
texture = ExtResource("2_vjpm0")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 180.0
linear_accel_min = -60.0
linear_accel_max = -60.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.5
scale_amount_max = 0.8
color_ramp = SubResource("Gradient_xidv6")
color_initial_ramp = SubResource("Gradient_6prn3")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
